# mike-t-302f-todomvc-111

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md  package.json  playwright.config.js
crates/backend/: Cargo.toml
crates/backend/migrations/: 20260607175800_create_todos.sql
crates/backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  todos.rs
crates/backend/tests/: todos.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: api.rs  lib.rs  state.rs  types.rs
e2e/: todomvc.spec.js
