[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "=0.8.9"
chrono = { version = "=0.4.44", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
sqlx = { version = "=0.9.0", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "migrate", "chrono"] }
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "=0.6.11", features = ["fs"] }
