[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "=0.8.19", features = ["csr"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "=0.6.0"
wasm-bindgen = "=0.2.108"
web-sys = { version = "=0.3.85", features = ["Location", "Window"] }
